INT-misc-40a19.19: Small work on payment page. On Universe page (both) links to action icon changed from relative to absolute

--- a/design/templates/OpenGame/metamatter.tpl.html
+++ b/design/templates/OpenGame/metamatter.tpl.html
@@ -19,7 +19,8 @@
   <!-- END discount -->
 </script>
 
-<table width="{$TABLE_WIDTH}">
+<table id="payment_metamatter_info">
+  <!--width="{$TABLE_WIDTH}"-->
   <tr class="c_j">
     <th>
       <span style="font-size: 1.8em">{L_sys_dark_matter_what_header}</span>
@@ -61,10 +62,10 @@
       {L_sys_dark_matter_obtain_text}
     </td>
   </tr>
-
 </table>
 
-<table width="{$TABLE_WIDTH}" id="payment_metamatter">
+<table id="payment_metamatter">
+  <!--width="{$TABLE_WIDTH}"-->
   <tr class="c_j">
     <th>
       <span style="font-size: 1.8em">{L_sys_metamatter_what_header}</span>
