--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -1153,6 +1153,14 @@ tr[prod_mode] > :not(:first-child) > span:not([style]) { /* Content of empire ce
 
 
 /* DarkMatter/MetaMatter --------------------------------------------------------------- */
+#payment_metamatter,  #payment_metamatter_info {
+  max-width: 78em; 
+}
+
+#payment_metamatter_info {
+  margin-bottom: 1em;
+}
+
 #payment_metamatter .border_image_small {
   margin-top: 1em;
 }
