--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -126,7 +126,7 @@
     <!-- BEGIN javascript -->
       <!-- IF javascript.CONTENT -->
         <script type="text/javascript">{javascript.CONTENT}</script>
-      <!-- ELSE -->
+      <!-- ELSEIF javascript.FILE -->
         <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}{javascript.FILE}?{C_var_db_update}"></script>
       <!-- ENDIF -->
     <!-- END javascript -->
