--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -303,6 +303,20 @@
         <!-- ENDIF -->
         <tr>
           <td class="c_l" colspan="2">
+            <input type="hidden" name="options[{D_PLAYER_OPTION_NAVBAR_RESEARCH_WIDE}]" value="0" />
+            <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_RESEARCH_WIDE}]" value="1" id="PLAYER_OPTION_NAVBAR_RESEARCH_WIDE" <!-- IF PLAYER_OPTION_NAVBAR_RESEARCH_WIDE -->checked="checked" <!-- ENDIF -->/>
+            <label for="PLAYER_OPTION_NAVBAR_RESEARCH_WIDE">{L_PLAYER_OPTION_NAVBAR_RESEARCH_WIDE}</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="c_l" colspan="2">
+            <input type="hidden" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_RESEARCH}]" value="0" />
+            <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_RESEARCH}]" value="1" id="PLAYER_OPTION_NAVBAR_DISABLE_RESEARCH" <!-- IF PLAYER_OPTION_NAVBAR_DISABLE_RESEARCH -->checked="checked" <!-- ENDIF -->/>
+            <label for="PLAYER_OPTION_NAVBAR_DISABLE_RESEARCH">{L_PLAYER_OPTION_NAVBAR_DISABLE_RESEARCH}</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="c_l" colspan="2">
             <input type="hidden" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_PLANET}]" value="0" />
             <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_PLANET}]" value="1" id="PLAYER_OPTION_NAVBAR_DISABLE_PLANET" <!-- IF PLAYER_OPTION_NAVBAR_DISABLE_PLANET -->checked="checked" <!-- ENDIF -->/>
             <label for="PLAYER_OPTION_NAVBAR_DISABLE_PLANET">{L_PLAYER_OPTION_NAVBAR_DISABLE_PLANET}</label>
@@ -313,6 +327,20 @@
             <input type="hidden" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_HANGAR}]" value="0" />
             <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_HANGAR}]" value="1" id="PLAYER_OPTION_NAVBAR_DISABLE_HANGAR" <!-- IF PLAYER_OPTION_NAVBAR_DISABLE_HANGAR -->checked="checked" <!-- ENDIF -->/>
             <label for="PLAYER_OPTION_NAVBAR_DISABLE_HANGAR">{L_PLAYER_OPTION_NAVBAR_DISABLE_HANGAR}</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="c_l" colspan="2">
+            <input type="hidden" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_EXPEDITIONS}]" value="0" />
+            <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_EXPEDITIONS}]" value="1" id="PLAYER_OPTION_NAVBAR_DISABLE_EXPEDITIONS" <!-- IF PLAYER_OPTION_NAVBAR_DISABLE_EXPEDITIONS -->checked="checked" <!-- ENDIF -->/>
+            <label for="PLAYER_OPTION_NAVBAR_DISABLE_EXPEDITIONS">{L_PLAYER_OPTION_NAVBAR_DISABLE_EXPEDITIONS}</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="c_l" colspan="2">
+            <input type="hidden" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_FLYING_FLEETS}]" value="0" />
+            <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_FLYING_FLEETS}]" value="1" id="PLAYER_OPTION_NAVBAR_DISABLE_FLYING_FLEETS" <!-- IF PLAYER_OPTION_NAVBAR_DISABLE_FLYING_FLEETS -->checked="checked" <!-- ENDIF -->/>
+            <label for="PLAYER_OPTION_NAVBAR_DISABLE_FLYING_FLEETS">{L_PLAYER_OPTION_NAVBAR_DISABLE_FLYING_FLEETS}</label>
           </td>
         </tr>
         <tr>
