NEWS-misc-40b0.3: Thin border when out on game pages

--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -715,6 +715,10 @@ input[type=text].coordinate {
 
 
 /* News and Surveys ================================================================================================= */
+#fresh_news_table {
+  margin-top: 1em;
+}
+
 .news_header {
   padding: 0.6em 1em;
   margin: 0.2em;
