--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -277,7 +277,7 @@
 <div id="navbar_refresh" class="button_pseudo" onclick="document.location.reload(true);">{L_topnav_refresh_page}</div>
 
 <!-- IF .announces && GAME_NEWS_OVERVIEW -->
-<table width=519 id="fresh_news_table" align="center">
+<table width=519 id="fresh_news_table" align="center" class="border_image_small">
   <tr>
     <th colspan=2 class="c_c">
       {L_news_fresh}
