NAVBAR-feat-40b0.10: MM button now can be disabled too

--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -350,6 +350,13 @@
             <label for="PLAYER_OPTION_NAVBAR_DISABLE_QUESTS">{L_PLAYER_OPTION_NAVBAR_DISABLE_QUESTS}</label>
           </td>
         </tr>
+        <tr>
+          <td class="c_l" colspan="2">
+            <input type="hidden" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER}]" value="0" />
+            <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER}]" value="1" id="PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER" <!-- IF PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER -->checked="checked" <!-- ENDIF -->/>
+            <label for="PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER">{L_PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER}</label>
+          </td>
+        </tr>
 
         <tr>
           <th class="c_c" colspan="2">{L_galaxyvision_options}</th>
