--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -256,7 +256,7 @@
           </a>
         </div>
 
-        <!-- IF TOPNAV_PAYMENT -->
+        <!-- IF ! PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER && TOPNAV_PAYMENT -->
         <div class="navbar_button">
           <a href="metamatter.php">
             <img class="navbar_button_image" src="{I_navbar_metamatter}" alt="{L_sys_metamatte}" title="{L_sys_metamatter}">
