INT-misc-40b0.15: Some images in EB and SN-I skins adjusted their real contents with extension

--- a/design/templates/OpenGame/metamatter.tpl.html
+++ b/design/templates/OpenGame/metamatter.tpl.html
@@ -75,7 +75,7 @@
   <tr class="c_j" id="metamatter_what_description" style="display: none;">
     <td>
       <div style="display: table-row; position: relative; margin: 7px;">
-        <img src="design/images/metamatter.jpg" align="top" border="0" height="120" width="120" class="fl" style="margin-right: 7px;">
+        <img src="design/images/metamatter.png" align="top" border="0" height="120" width="120" class="fl" style="margin-right: 7px;">
         {L_sys_metamatter_what_description}
       </div>
     </td>
