--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -5,7 +5,6 @@ var production = Array();
 var require = Array();
 var grants = Array();
 var unit_selected = null;
-// var eco_bld_style_probe;
 var STACKABLE = '{STACKABLE}';
 var TEMPORARY = parseInt('{TEMPORARY}');
 var CAN_AUTOCONVERT = parseInt('{CAN_AUTOCONVERT}') ? parseInt('{CAN_AUTOCONVERT}') : 0;
@@ -18,11 +17,6 @@ var PLANET_ID = isNaN(PLANET_ID = parseInt('{PLN_ID}')) ? 0 : PLANET_ID;
 var que_id = '{QUE_ID}';
 
 $.extend(language, {
-//  sys_confirm: '{LA_sys_confirm}',
-//  sys_cancel: '{LA_sys_cancel}',
-//  sys_confirm_action: '{LA_sys_confirm_action}',
-//  sys_confirm_action_title: '{LA_sys_confirm_action_title}',
-
   eco_que_clear_dialog_title: '{LA_eco_que_clear_dialog_title}',
   eco_que_clear_dialog_text: '{LA_eco_que_clear_dialog_text}',
 
@@ -124,6 +118,7 @@ planet = {
   production[{production.ID}] = {
     id: '{production.ID}',
     name: '{production.NAME}',
+    'image': '{I_[production.ID]}',
     level: '{production.LEVEL}',
     level_bonus: '{production.LEVEL_BONUS}',
     change: '{production.CHANGE}',
@@ -184,7 +179,7 @@ planet = {
 <!-- END production -->
 </script>
 
-<script type="text/javascript" src="js/build_unit.js?{C_var_db_update}"></script>
+<script type="text/javascript" src="js/build_unit.min.js?{C_var_db_update}"></script>
 
 <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
 <!-- INCLUDE eco_queue -->
@@ -247,7 +242,7 @@ planet = {
               <div id="unit_description_wrapper_cell">
                 <div id="unit_info_image_outer">
                   <div id="unit_info_image_wrapper">
-                    <img id="unit_info_image" src_base="{I_UNIT_ID}" />
+                    <img id="unit_info_image" />
                     <div id="unit_info_name" class="a75"></div>
                     <div id="unit_info_level" class="a75"></div>
                   </div>
